Сделал всё, кроме последнего пункта.

--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -23,7 +23,14 @@
       "\n",
       "Сохраняем датафрейм original_df в csv\n",
       "---------------------------------------------------------------------\n",
-      "original_df сохранен в intermediate data/tmp/drawing_plots.py_original_df.csv\n",
+      "original_df сохранен в tmp\\drawing_plots.py_original_df.csv\n",
+      "\n",
+      "\n",
+      "Анализ данных\n",
+      "===================================================================================================\n",
+      "\n",
+      "Строки с Gt_corners=Rb_corners:\n",
+      "---------------------------------------------------------------------\n",
       "Empty DataFrame\n",
       "Columns: [name, gt_corners, rb_corners, mean, max, min, floor_mean, floor_max, floor_min, ceiling_mean, ceiling_max, ceiling_min]\n",
       "Index: []\n",
@@ -63,8 +70,130 @@
       "Unique in floor_min: 1347\n",
       "Unique in ceiling_mean: 1347\n",
       "Unique in ceiling_max: 1347\n",
-      "Unique in ceiling_min: 1347\n"
+      "Unique in ceiling_min: 1347\n",
+      "\n",
+      "Поиск дубликатов в original_df\n",
+      "---------------------------------------------------------------------\n",
+      "Количество дубликатов в original_df:\n",
+      "0\n",
+      "\n",
+      "Поиск пустых клеток в original_df\n",
+      "---------------------------------------------------------------------\n",
+      "Количество строк с пустыми клетками в original_df:\n",
+      "0\n",
+      "Количество столбцов с пустыми клетками в original_df:\n",
+      "0\n",
+      "\n",
+      "\n",
+      "Графики.\n",
+      "===================================================================================================\n",
+      "\n",
+      "Гистограмма для столбца mean в датафрейме original_df\n",
+      "---------------------------------------------------------------------\n",
+      "Сохранено в plots/drawing_plots.py_original_df_mean_histogram.png\n",
+      "\n",
+      "Боксплот для столбца mean в датафрейме original_df\n",
+      "---------------------------------------------------------------------\n",
+      "Сохранено в plots/drawing_plots.py_original_df_mean_boxplot.png\n",
+      "\n",
+      "Гистограмма для столбца max в датафрейме original_df\n",
+      "---------------------------------------------------------------------\n",
+      "Сохранено в plots/drawing_plots.py_original_df_max_histogram.png\n",
+      "\n",
+      "Боксплот для столбца max в датафрейме original_df\n",
+      "---------------------------------------------------------------------\n",
+      "Сохранено в plots/drawing_plots.py_original_df_max_boxplot.png\n",
+      "\n",
+      "Гистограмма для столбца min в датафрейме original_df\n",
+      "---------------------------------------------------------------------\n",
+      "Сохранено в plots/drawing_plots.py_original_df_min_histogram.png\n",
+      "\n",
+      "Боксплот для столбца min в датафрейме original_df\n",
+      "---------------------------------------------------------------------\n",
+      "Сохранено в plots/drawing_plots.py_original_df_min_boxplot.png\n",
+      "\n",
+      "Гистограмма для столбца floor_mean в датафрейме original_df\n",
+      "---------------------------------------------------------------------\n",
+      "Сохранено в plots/drawing_plots.py_original_df_floor_mean_histogram.png\n",
+      "\n",
+      "Боксплот для столбца floor_mean в датафрейме original_df\n",
+      "---------------------------------------------------------------------\n",
+      "Сохранено в plots/drawing_plots.py_original_df_floor_mean_boxplot.png\n",
+      "\n",
+      "Гистограмма для столбца floor_max в датафрейме original_df\n",
+      "---------------------------------------------------------------------\n",
+      "Сохранено в plots/drawing_plots.py_original_df_floor_max_histogram.png\n",
+      "\n",
+      "Боксплот для столбца floor_max в датафрейме original_df\n",
+      "---------------------------------------------------------------------\n",
+      "Сохранено в plots/drawing_plots.py_original_df_floor_max_boxplot.png\n",
+      "\n",
+      "Гистограмма для столбца floor_min в датафрейме original_df\n",
+      "---------------------------------------------------------------------\n",
+      "Сохранено в plots/drawing_plots.py_original_df_floor_min_histogram.png\n",
+      "\n",
+      "Боксплот для столбца floor_min в датафрейме original_df\n",
+      "---------------------------------------------------------------------\n",
+      "Сохранено в plots/drawing_plots.py_original_df_floor_min_boxplot.png\n",
+      "\n",
+      "Гистограмма для столбца ceiling_mean в датафрейме original_df\n",
+      "---------------------------------------------------------------------\n",
+      "Сохранено в plots/drawing_plots.py_original_df_ceiling_mean_histogram.png\n",
+      "\n",
+      "Боксплот для столбца ceiling_mean в датафрейме original_df\n",
+      "---------------------------------------------------------------------\n",
+      "Сохранено в plots/drawing_plots.py_original_df_ceiling_mean_boxplot.png\n",
+      "\n",
+      "Гистограмма для столбца ceiling_max в датафрейме original_df\n",
+      "---------------------------------------------------------------------\n",
+      "Сохранено в plots/drawing_plots.py_original_df_ceiling_max_histogram.png\n",
+      "\n",
+      "Боксплот для столбца ceiling_max в датафрейме original_df\n",
+      "---------------------------------------------------------------------\n",
+      "Сохранено в plots/drawing_plots.py_original_df_ceiling_max_boxplot.png\n",
+      "\n",
+      "Гистограмма для столбца ceiling_min в датафрейме original_df\n",
+      "---------------------------------------------------------------------\n",
+      "Сохранено в plots/drawing_plots.py_original_df_ceiling_min_histogram.png\n",
+      "\n",
+      "Боксплот для столбца ceiling_min в датафрейме original_df\n",
+      "---------------------------------------------------------------------\n",
+      "Сохранено в plots/drawing_plots.py_original_df_ceiling_min_boxplot.png\n",
+      "\n",
+      "Гистограмма для столбца gt_corners в датафрейме original_df\n",
+      "---------------------------------------------------------------------\n",
+      "Сохранено в plots/drawing_plots.py_original_df_gt_corners_histogram.png\n",
+      "\n",
+      "Гистограмма для столбца rb_corners в датафрейме original_df\n",
+      "---------------------------------------------------------------------\n",
+      "Сохранено в plots/drawing_plots.py_original_df_rb_corners_histogram.png\n",
+      "\n",
+      "Тепловая карта корреляций для original_df\n",
+      "---------------------------------------------------------------------\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\denis\\PycharmProjects\\Test-DocuSketch\\drawing_plots.py:230: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
+      "  corr_df = df.corr()\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Сохранено в plots/drawing_plots.py_original_df_heatmap.png\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "['plots/drawing_plots.py_original_df_mean_histogram.png',\n 'plots/drawing_plots.py_original_df_mean_boxplot.png',\n 'plots/drawing_plots.py_original_df_max_histogram.png',\n 'plots/drawing_plots.py_original_df_max_boxplot.png',\n 'plots/drawing_plots.py_original_df_min_histogram.png',\n 'plots/drawing_plots.py_original_df_min_boxplot.png',\n 'plots/drawing_plots.py_original_df_floor_mean_histogram.png',\n 'plots/drawing_plots.py_original_df_floor_mean_boxplot.png',\n 'plots/drawing_plots.py_original_df_floor_max_histogram.png',\n 'plots/drawing_plots.py_original_df_floor_max_boxplot.png',\n 'plots/drawing_plots.py_original_df_floor_min_histogram.png',\n 'plots/drawing_plots.py_original_df_floor_min_boxplot.png',\n 'plots/drawing_plots.py_original_df_ceiling_mean_histogram.png',\n 'plots/drawing_plots.py_original_df_ceiling_mean_boxplot.png',\n 'plots/drawing_plots.py_original_df_ceiling_max_histogram.png',\n 'plots/drawing_plots.py_original_df_ceiling_max_boxplot.png',\n 'plots/drawing_plots.py_original_df_ceiling_min_histogram.png',\n 'plots/drawing_plots.py_original_df_ceiling_min_boxplot.png',\n 'plots/drawing_plots.py_original_df_gt_corners_histogram.png',\n 'plots/drawing_plots.py_original_df_rb_corners_histogram.png',\n 'plots/drawing_plots.py_original_df_heatmap.png']"
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
